[package]
name = "ripen"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A simple TUI RPN calculator"
homepage = "https://github.com/aprzn123/RiPeN"
repository = "https://github.com/aprzn123/RiPeN"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
directories = "5.0.1"
mlua = { version = "0.9.9", features = ["lua54"] }
ratatui = "0.20.1"
uiua = { version = "0.11", default-features = false }
